stderr
TwelveDaysStepDef.java:16: error: method sing in class TwelveDays cannot be applied to given types;
        loot = TwelveDays.sing();
                         ^
  required: int
  found:    no arguments
  reason: actual and formal argument lists differ in length
1 error
